--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Test cases generator using pair-wise strategy."
+    />
+    <meta
+      name="keywords"
+      content="pair-wise, generator, PICT, open-source, test, testing"
+    />
     <title>PairWise Test Generator</title>
   </head>
   <body>
