--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     />
     <title>PairWise Test Generator</title>
   </head>
-  <body>
+  <body class="">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
